<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="submit">Submit</string>
    <string name="learner_badge">learner badge</string>
    <string name="learner_name">Lenny Dennis</string>
    <string name="total_hours">200</string>
    <string name="learning_hours">" learning hours, "</string>
    <string name="learner_country">Kenya</string>
    <string name="skill_iq_score">" Skill IQ Score, "</string>
    <string name="submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="github_link">Project on GITHUB(link)</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submission_not_successful">Submission Not Successful</string>
    <string name="submission_successful">Submission Successful</string>
</resources>